# house-helper

./: .env.example  .gitignore  DECISIONS.md  HANDOFF.md  MERGE_NOTES.md  README.md  RUNBOOK.md  jobsmith_decisions.md  nest_decisions.md  pick_plan.md  pyproject.toml  reset.sh  restart.sh  run.sh  setup.bat  setup.sh  skills-feedback.md  start.bat  start.sh  test.sh
.github/workflows/: release.yml  test.yml
architecture/: job-agent-v2.md  job-agent.md  nest-lab-implementation-plan.md  nest-lab.md  tauri-desktop.md  user-auth-multiuser.md
backend/: coordinator.py  main.py
backend/auth/: db.py  encryption.py  middleware.py  routes.py  service.py
backend/shared/: _dbg.py  address_utils.py  api_keys.py  app_logger.py  ats_optimizer.py  ats_rules.json  credential_routes.py  credentials.py  db.py  docx_surgery.py  input_validation.py  pipeline.py  (+4 more)
docs/: skills-feedback.md
frontend/: package-lock.json  package.json  vite.config.ts
requirements/: job-agent-v2.md  job-agent.md  nest-lab.md  search-filters-budget-reset.md  tauri-desktop.md  user-auth-multiuser.md
scripts/: build-app.sh  setup-tauri.sh
tests/: test_api.py  test_cost_tracking.py  test_curated_resumes.py  test_dashboard_reset.py  test_docx_surgery.py  test_knowledge_merge.py  test_live_search.py  test_llm_providers.py  test_pdf_parsing.py  test_real_resume_import.py  test_resume_docx_integration.py  test_resume_matching.py  test_resume_templates.py  test_saved_resumes.py  test_search_defaults.py  test_suggestion_feedback.py  test_template_integration.py  test_user_instructions.py  test_v2_api.py
(+379 files in other folders)
