[project]
name = "panini"
version = "0.1.0"
description = "Multi-agent desktop assistant — job application agent"
requires-python = ">=3.10"

dependencies = [
    "rapidfuzz>=3.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
offline = [
    "sentence-transformers>=3.0",
    "spacy>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
markers = [
    "network: tests that require internet access",
    "live: live API tests — run manually, not in CI (uses real API quota)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
